Get and Put for /api/anime end point
